2015-08-27  Zalan Bujtas  <zalan@apple.com>

        Subpixel positioned iframe's repaint area calculation problem.
        https://bugs.webkit.org/show_bug.cgi?id=148422

        When the repaint rect position is floored for iframes, we need
        to expand the size so that it still covers the content.

        Reviewed by Simon Fraser.

        * fast/repaint/content-inside-subpixel-positioned-iframe-expected.txt: Added.
        * fast/repaint/content-inside-subpixel-positioned-iframe.html: Copied from LayoutTests/fast/repaint/hidpi-content-inside-iframe-leaves-trails.html.
        * fast/repaint/hidpi-content-inside-iframe-leaves-trails.html:

2015-08-26  Mark Lam  <mark.lam@apple.com>

        watchdog m_didFire state erroneously retained.
        https://bugs.webkit.org/show_bug.cgi?id=131082

        Reviewed by Geoffrey Garen.

        * fast/workers/worker-terminate-forever-expected.txt:
        * fast/workers/worker-terminate-forever.html:
        - Updated to check if the worker actually did terminate. 

2015-08-27  Anders Carlsson  <andersca@apple.com>

        REGRESSION (r188987): imported/mozilla/svg/filters/feConvolveMatrix-1.svg fails
        https://bugs.webkit.org/show_bug.cgi?id=148497
        <rdar://problem/22459541>

        Reviewed by Andy Estes.

        * TestExpectations:

2015-08-31  Antti Koivisto  <antti@apple.com>

        REGRESSION (r188820): fast/dom/HTMLObjectElement/object-as-frame.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=148533

        Reviewed by Chris Dumez.

        * TestExpectations:

            Unskip.

        * fast/dom/HTMLObjectElement/object-as-frame.html:

            Use more logical text in the data url.

        * http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt:
        * http/tests/loading/basic-credentials-sent-automatically-expected.txt:
        * platform/wk2/http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt: