@@ -1,3 +1,13 @@
+2015-08-27  Basile Clement  <basile_clement@apple.com>
+
+        REGRESSION(r184779): Possible read-after-free in JavaScriptCore/dfg/DFGClobberize.h
+        https://bugs.webkit.org/show_bug.cgi?id=148411
+
+        Reviewed by Geoffrey Garen and Filip Pizlo.
+
+        * dfg/DFGClobberize.h:
+        (JSC::DFG::clobberize):
+
 2015-08-26  Saam barati  <sbarati@apple.com>
 
         MarkedBlock::allocateBlock will have the wrong allocation size when (sizeof(MarkedBlock) + bytes) is divisible by WTF::pageSize()
