@@ -1,3 +1,15 @@
+2015-08-27  Basile Clement  <basile_clement@apple.com>
+
+        REGRESSION(r184779): Possible read-after-free in JavaScriptCore/dfg/DFGClobberize.h
+        https://bugs.webkit.org/show_bug.cgi?id=148411
+
+        Reviewed by Geoffrey Garen and Filip Pizlo.
+
+        * js/regress-148411-expected.txt: Added.
+        * js/regress-148411.html: Added.
+        * js/script-tests/regress-148411.js: Added.
+        (foo):
+
 2015-08-27  Zalan Bujtas  <zalan@apple.com>
 
         Subpixel positioned iframe's repaint area calculation problem.
